Fix search openapi
